--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -305,7 +305,7 @@
     "### Qiskit patterns step 2: optimize\n",
     "\n",
     "Now that we have generated our circuit, [the next step](/docs/tutorials/probabilistic-error-amplification#step-2-optimize-problem-for-quantum-hardware-execution) is to optimize it. The first part of this process involves defining a pass manager. In the context of the Qiskit SDK, transpilation is the process of transforming an input circuit into a form that is suitable for execution on a quantum device. This transformation happens through a sequence of steps known as transpiler passes.\n",
-    "A pass manager is an object that holds a list of these transpiler passes and can apply them to a circuit. To create one, you initialize a PassManager with the desired list of transpiler passes. Ultimately, the pass manager produces an ISA circuit—a circuit expressed in terms of the backend’s Instruction Set Architecture (ISA). This means the circuit is represented using gates that are native to the backend hardware, although it does not yet include the timing information required to run the circuit on the device.\n",
+    "A pass manager is an object that holds a list of these transpiler passes and can apply them to a circuit. To create one, you initialize a `PassManager` with the desired list of transpiler passes. Ultimately, the pass manager produces an ISA circuit—a circuit expressed in terms of the backend’s Instruction Set Architecture (ISA). This means the circuit is represented using gates that are native to the backend hardware, although it does not yet include the timing information required to run the circuit on the device.\n",
     "\n",
     "### Qiskit patterns step 3: execute using primitives\n",
     "\n",
