Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -36,7 +36,7 @@
     "\n",
     "At the opposite end are extremely challenging problems that demand fully fault-tolerant quantum machines — technology that is not yet available. Fortunately, many simulation problems are believed to fall somewhere in the middle of this timeline, within the range where today’s quantum computers can already be effectively applied. There are many reasons to be excited and intrigued by this prospect, as simulating nature forms the foundation for a wide range of promising applications.\n",
     "\n",
-    "In what follows we will cover the general workflow in nature simulations and then a specific instance of the workflow to replicate results from a well-known study."
+    "The following information covers the general workflow in nature simulations and then a specific instance of the workflow to replicate results from a well-known study."
    ]
   },
   {
@@ -60,7 +60,7 @@
     "\n",
     "After setting up the time-evolution circuit, the subsequent stages involve performing the actual experiment. This typically includes optimizing the quantum circuit that implements the time-evolution algorithm, running the circuit on quantum hardware, and post-processing the results. These are the same as the last three steps in the Qiskit patterns framework.\n",
     "\n",
-    "Now let's walk through what these steps mean before we move on to coding.\n",
+    "Next, we'll discuss what these steps mean before we move on to coding.\n",
     "\n",
     "__1. Identify the system Hamiltonian__\n",
     "\n",
