Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -93,7 +93,7 @@
     "If you have a system with distinguishable particles, like $1/2$ spins fixed on a lattice, which we took a simple look at above, the Hamiltonian is often already written in a language compatible with qubits. The Pauli-Z operator, for instance, naturally describes a spin's up or down, and no special encoding is needed.\n",
     "\n",
     "When simulating indistinguishable particles of fermions or bosons, it is necessary to apply an encoding transformation. These particles are used to describe within a special mathematical framework called `second quantization`, which tracks the occupation number of each quantum state by introducing `creation` and `annihilation` operators, where the creation operator $\\hat{a}_i^\\dagger$ adds one particle to state $i$ while the annihilation operator $\\hat{a}_i$ removes one particle from state $i$. Based on this second quantization framework, the fermion can be transformed by Bravyi-Kitaev and Jordan-Wigner. Jordan-Wigner transformation defines the fermionic creation operator\n",
-    "$\\hat{f}_j^\\dagger = \\Bigl( \\prod\\limits_{k \\lt j}{(-Z_k)} \\Bigr)\\Bigl( \\frac{X_j + i Y_j}{2} \\Bigr)$ which fill the $j$-th quantum state with a fermion and fermionic annihilation operator $\\hat{f}_j= \\Bigl( \\prod\\limits_{k \\lt j}{(-Z_k)} \\Bigr)\\Bigl( \\frac{X_j - i Y_j}{2} \\Bigr)$ which empties a fermion from the $j$=th states. You can find more details of this Jordan-Wigner transformation at our [Quantum Computing in Practice, episode 5 - Mapping](https://quantum.cloud.ibm.com/learning/en/courses/quantum-computing-in-practice/mapping). Similarly, bosons also require their own encoding methods, such as the Holstein-Primakoff transformation, to be represented by qubits.\n",
+    "$\\hat{f}_j^\\dagger = \\Bigl( \\prod\\limits_{k \\lt j}{(-Z_k)} \\Bigr)\\Bigl( \\frac{X_j + i Y_j}{2} \\Bigr)$ which fill the $j$-th quantum state with a fermion and fermionic annihilation operator $\\hat{f}_j= \\Bigl( \\prod\\limits_{k \\lt j}{(-Z_k)} \\Bigr)\\Bigl( \\frac{X_j - i Y_j}{2} \\Bigr)$ which empties a fermion from the $j$=th states. You can find more details of this Jordan-Wigner transformation at our [Quantum Computing in Practice, episode 5 - Mapping](/learning/courses/quantum-computing-in-practice/mapping). Similarly, bosons also require their own encoding methods, such as the Holstein-Primakoff transformation, to be represented by qubits.\n",
     "\n",
     "Ultimately, whether the path is direct or requires a translation, the goal is the same: to express the system's Hamiltonian in the form of Pauli spin operators that a quantum computer can understand and execute.\n",
     "\n",
@@ -117,7 +117,7 @@
     "$$\n",
     "\n",
     "\n",
-    "However, this process often requires an exponential number of CNOT gates, making it generally resource-intensive. We often focus on preparing initial states for which the implementation resource demands are more modest. For this reason, we often focus on preparing initial states that are less complex. A common and practical choice is a product state, where qubits are not entangled, can be prepared using only single-qubit operations, significantly reducing the resource demands of the state preparation and the complexity."
+    "However, this process often requires an exponential number of CNOT gates, making it generally resource intensive. We often focus on preparing initial states for which the implementation resource demands are more modest. For this reason, we often focus on preparing initial states that are less complex. A common and practical choice is a product state, where qubits are not entangled, can be prepared using only single-qubit operations, significantly reducing the resource demands of the state preparation and the complexity."
    ]
   },
   {
@@ -127,13 +127,13 @@
    "source": [
     "__4. Time-evolution of the state__\n",
     "\n",
-    "Now that the initial state is set, we can finally begin the simulation itself - see how the system's state $|\\phi(t=0)\\rangle$ changed into $|\\phi(t)\\rangle$ after some time, $t$. In quantum mechanics, this evolution is described by a single mathematical operation called the time-evolution operator:\n",
+    "Now that the initial state is set, we can finally begin the simulation itself - examine how the system's state $|\\phi(t=0)\\rangle$ changed into $|\\phi(t)\\rangle$ after some time, $t$. In quantum mechanics, this evolution is described by a single mathematical operation called the time-evolution operator:\n",
     "$$\n",
     "U(t) = e^{-iHt}\n",
     "$$\n",
     "where we have set $\\hbar=1$ by convention. Applying this operator to our initial state gives us the final state: $|\\phi(t)\\rangle = e^{-iHt}|\\phi(t=0)\\rangle$\n",
     "\n",
-    "However, building a quantum circuit that directly implements the full operator $e^{-iHt}$ is typically impossible when our Hamiltonian is a sum of different parts, and this is the time we need the Trotterization.\n",
+    "However, building a quantum circuit that directly implements the full operator $e^{-iHt}$ is typically impossible when our Hamiltonian is a sum of different parts, therefore, we need the Trotterization.\n",
     "\n",
     "In simple terms, trotterization is a technique for approximating the exponentiation of a matrix (here the Hamiltonian, $H$), especially when the exponent contains non-commuting operators ($[H_A, H_B] \\neq 0$). Often the Hamiltonian $H$ consists of multiple operators that do not commute. In this case, you cannot separate their exponentials:\n",
     "$$\n",
