Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -140,7 +140,7 @@
     "e^{-i(H_A + H_B)t} \\neq e^{-iH_A t}e^{-iH_B t}\n",
     "$$\n",
     "\n",
-    "A useful approach is to alternately apply their time-evolution exponentials over small durations $t/n$ a total of $n$ times. In the case of two these two non-commuting contributions, we would write\n",
+    "A useful approach is to alternately apply their time-evolution exponentials over small durations, $t/n$, a total of $n$ times. In the case of these two non-commuting contributions, we would write\n",
     "\n",
     "$$\n",
     "e^{−i H t}\\approx \\left(e^{−i H_A t/n}e^{−i H_B t/n}\\right)^n\n",
