Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -148,7 +148,7 @@
     "\n",
     "![A quantum circuit showing trotterized time-evolution operators: operators split into small pieces.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/trotter.svg)\n",
     "\n",
-    "The error introduced by this approximation is called the Trotter error. We can reduce this error by increasing $n$, but this comes at a cost. More advanced, higher-order formulas- the second-order and other variants also exist. For example, the second-order formula offers better accuracy by applying the steps in a symmetric pattern.\n",
+    "The error introduced by this approximation is called the Trotter error. We can reduce this error by increasing $n$, but this comes at a cost. More advanced, higher-order formulas (the second-order and other variants) also exist. For example, the second-order formula offers better accuracy by applying the steps in a symmetric pattern.\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -157,7 +157,7 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "Here $N$ is the number of non-commuting terms $H_j$ in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment.\n",
+    "Here, $N$ is the number of non-commuting terms, $H_j$, in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment.\n",
     "\n",
     "See the section on trotterization in the course [Quantum Diagonalization Algorithms](https://quantum.cloud.ibm.com/learning/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) for more details."
    ]
