Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "Here, $N$ is the number of non-commuting terms, $H_j$, in the Hamiltonian to be broken up in this way, and $n$ is the number of small time steps into which this evolution is broken. Note the reverse order of operators in the second product in the second-order treatment.\n",
     "\n",
-    "See the section on trotterization in the course [Quantum Diagonalization Algorithms](https://quantum.cloud.ibm.com/learning/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) for more details."
+    "See the trotterization section in the [Quantum Diagonalization Algorithms](/learning/courses/quantum-diagonalization-algorithms/krylov#31-time-evolution) course for more details."
    ]
   },
   {
@@ -171,10 +171,10 @@
     "\n",
     "After generating the trotterized circuit, the mapping step is complete, and we can proceed to circuit optimization. This process involves several key tasks:\n",
     "\n",
-    "- __Establishing a qubit layout__ that maps the abstract qubits of the circuit to the physical qubits on the hardware. This step is necessary because the hardware’s architecture often has specific connectivity constraints, while quantum circuit designs typically assume any qubit can interact with any other.\n",
-    "- __Inserting swap gates__ as needed to enable interactions between qubits that are not directly connected on the device.\n",
-    "- __Translating the circuit’s gates into Instruction Set Architecture (ISA) instructions__ that the hardware can execute directly.\n",
-    "- __Performing circuit optimizations__ to reduce the circuit depth and gate count. This optimization can also be applied earlier, on the virtual circuit before the qubits are assigned to specific hardware connections.\n",
+    "- __Establish a qubit layout__ that maps the abstract qubits of the circuit to the physical qubits on the hardware. This step is necessary because the hardware’s architecture often has specific connectivity constraints, while quantum circuit designs typically assume any qubit can interact with any other.\n",
+    "- __Insert swap gates__ as needed to enable interactions between qubits that are not directly connected on the device.\n",
+    "- __Translate the circuit’s gates into Instruction Set Architecture (ISA) instructions__ that the hardware can execute directly.\n",
+    "- __Perform circuit optimizations__ to reduce the circuit depth and gate count. This optimization can also be applied earlier, on the virtual circuit before the qubits are assigned to specific hardware connections.\n",
     "\n",
     "It is important to note that much of this optimization process is handled automatically by tools in Qiskit. We will explore exactly how this works later in this lesson.\n",
     "\n",
@@ -182,11 +182,11 @@
     "\n",
     "After completing the optimization step, we are ready to execute the circuit using a primitive. We are considering a simulation experiment in which the goal is to understand how certain properties of the system change over time. For this purpose, the Estimator primitive is the most appropriate choice, as it allows you to measure the expectation values of observables that correspond to these properties.\n",
     "\n",
-    "Next, we configure the Estimator with the best available options, including [error suppression and mitigation techniques](https://quantum.cloud.ibm.com/docs/en/guides/error-mitigation-and-suppression-techniques), to improve accuracy. Finally, we run the experiment to collect the results.\n",
+    "Next, we use options including [error suppression and mitigation techniques](/docs/guides/error-mitigation-and-suppression-techniques), to improve the Estimator's accuracy. Finally, we run the experiment to collect the results.\n",
     "\n",
     "__7. Post-process__\n",
     "\n",
-    "The final step is to post-process all the collected data. This involves extracting the measured expectation values, or, if the Sampler primitive was used, the sampled probability distribution in the computational basis. When only the expectation values of the relevant observables are needed, these can be directly obtained from the Estimator primitive, available both as raw results and with error mitigation applied. Often, these measured expectation values serve as the starting point for additional calculations involving other quantities of interest. Such additional calculations typically do not require quantum computation and can be efficiently performed on a classical computer."
+    "The final step is to post-process the collected data. This involves extracting the measured expectation values, or, if the Sampler primitive was used, the sampled probability distribution in the computational basis. When only the expectation values of the relevant observables are needed, these can be directly obtained from the Estimator primitive, available both as raw results and with error mitigation applied. Often, these measured expectation values serve as the starting point for additional calculations involving other quantities of interest. Such additional calculations typically do not require quantum computation and can be efficiently performed on a classical computer."
    ]
   },
   {
@@ -198,7 +198,7 @@
     "\n",
     "<Admonition type=\"note\">\n",
     "\n",
-    "This part is a high-level walk-through of [Utility-scale error mitigation with probabilistic error amplification](/docs/tutorials/probabilistic-error-amplification) tutorial, which replicates the result of the [Evidence for the Utility of Quantum Computing Before Fault Tolerance](https://www.nature.com/articles/s41586-023-06096-3) paper. We strongly suggest you open target tutorial along with this session.\n",
+    "This part is a high-level walk-through of [Utility-scale error mitigation with probabilistic error amplification](/docs/tutorials/probabilistic-error-amplification) tutorial, which replicates the result of the [Evidence for the Utility of Quantum Computing Before Fault Tolerance](https://www.nature.com/articles/s41586-023-06096-3) paper. We strongly suggest you open the referenced tutorial along with this session.\n",
     "\n",
     "</Admonition>\n",
     "\n",
