Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "</Admonition>\n",
     "\n",
-    "We will now examine a concrete example from a highly influential paper published by IBM a few years ago, titled [Evidence for the Utility of Quantum Computing Before Fault Tolerance](https://www.nature.com/articles/s41586-023-06096-3), often referred to as the \"Utility paper\".\n",
+    "We will now examine a concrete example from a highly influential paper published by IBM in 2023, titled [Evidence for the Utility of Quantum Computing Before Fault Tolerance](https://www.nature.com/articles/s41586-023-06096-3), often referred to as the \"Utility paper\".\n",
     "\n",
     "![The cover art of the article we call the utility paper, published in the journal Nature.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/utility.svg)\n",
     "\n",
@@ -213,7 +213,7 @@
     "Another remarkable aspect of this work is that it has been widely reproduced: researchers and users now have the ability to replicate and verify the experiment using IBM’s cloud-accessible quantum systems and the Qiskit software framework. In the following, we will guide you through the steps to perform this replication yourself by reviewing [IBM's tutorial](/docs/tutorials/probabilistic-error-amplification) step by step.\n",
     "\n",
     "\n",
-    "In this lesson, we dive deeper into the specific steps required to translate the problem into inputs that a quantum device can process. We focused on simulating the dynamics of the total magnetization in a system of magnetic dipole spins arranged on a lattice, subjected to an external magnetic field. This system can be described by an Ising model with a transverse magnetic field. We represent it using a parametrized quantum circuit, where the parameters correspond to the tunable values of the spin-spin ($ZZ$) interactions and the strength of the external, transverse magnetic field ($B_x$, parametrized using $X$).\n",
+    "In this lesson, we discuss the specific steps required to translate the problem into inputs that a quantum device can process. We focus on simulating the dynamics of the total magnetization in a system of magnetic dipole spins arranged on a lattice, subjected to an external magnetic field. This system can be described by an Ising model with a transverse magnetic field. We represent it using a parametrized quantum circuit, where the parameters correspond to the tunable values of the spin-spin ($ZZ$) interactions and the strength of the external, transverse magnetic field ($B_x$, parametrized using $X$).\n",
     "\n",
     "![Spins on a lattice that point either up or down.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/spins-lattice.svg)\n",
     "\n",
@@ -222,16 +222,16 @@
     "Additionally, we will discuss how to construct the parametrized quantum circuit that implements the system’s time-evolution using trotterization. A key part of this process is identifying entangling layers within the circuit, which play a crucial role in the main error mitigation technique.\n",
     "\n",
     "\n",
-    "### Qiskit patterns step 1: Mapping\n",
+    "### Qiskit patterns step 1: Map\n",
     "\n",
     "\n",
-    "[The tutorial](/docs/tutorials/probabilistic-error-amplification#step-1-map-classical-inputs-to-a-quantum-problem) accomplishes the mapping step very much in line with the general approach described above. Specific to this problem, the tutorial\n",
+    "[The tutorial](/docs/tutorials/probabilistic-error-amplification#step-1-map-classical-inputs-to-a-quantum-problem) accomplishes the mapping step similarly to the general approach described above. Specific to this problem, the tutorial does the following:\n",
     "\n",
     "* Creates a parameterized Ising model circuit\n",
     "* Creates entangling layers and removes bad qubits\n",
     "* Generates a trotterized version of the circuit\n",
     "\n",
-    "In the tutorial, you will notice that we begin by creating a series of helper functions early in the notebook. These functions are designed to simplify the process as we proceed. These are not a required part of the procedure, but this is good common practice when working on similar experiments: break down the problem into manageable components. The functions include\n",
+    "In the tutorial, we begin by creating a series of helper functions early in the notebook. These functions are designed to simplify the process as we proceed. These are not a required part of the procedure, but this is good common practice when working on similar experiments: break down the problem into manageable components. The functions include\n",
     "\n",
     "- Remove qubit couplings\n",
     "- Define qubit couplings\n",
@@ -267,7 +267,7 @@
     "\n",
     "The next step involves removing the “bad” qubits from the list of physical qubits available for the experiment. A qubit can become “bad” for various reasons. Sometimes it’s simply a matter of poor calibration, which can be fixed by recalibrating. In other cases, the issue is more complex and related to what’s known as a two-level system (TLS) defect. These TLS defects cause fluctuations in qubit parameters and relaxation. Resolving this often requires warming up the entire system and then cooling it down again—a process that can take some time and isn’t feasible when accessing quantum hardware remotely via the cloud.\n",
     "\n",
-    "For now, the simplest approach is to exclude these problematic qubits from the pool of physical qubits that will be used in the experiment. The IBM Quantum platform makes it easy to identify which qubits are underperforming. You can either visualize their characteristics directly on the platform or download the data as a CSV file. From there, you create a list of qubits to exclude and remove them from the total set of physical qubits on the device.\n",
+    "For now, the simplest approach is to exclude these problematic qubits from the pool of physical qubits that will be used in the experiment. [IBM Quantum Platform](https://quantum.cloud.ibm.com/computers)&reg; makes it easy to identify which qubits are underperforming on a QPU. You can either open the QPU and visualize their characteristics directly on the platform or download the data from the platform as a CSV file. Next, create a list of qubits to exclude and remove them from the total set of physical qubits on the device.\n",
     "\n",
     "![The layout of a quantum computer is shown with a low-performing qubit indicated in pink.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/bad-qubits.svg)\n",
     "\n",
@@ -281,7 +281,7 @@
    "source": [
     "__Trotterized circuit__\n",
     "\n",
-    "It is now time to construct our trotterized circuit. As discussed earlier, trotterization breaks down the time evolution into discrete steps, and we need to choose how many steps to use. For this example, we will select six steps. Generally, the approach involves balancing the trotter error—an approximation error introduced by the algorithm—with errors caused by decoherence. Increasing the number of trotter steps reduces the approximation error but requires deeper quantum circuits, which are more susceptible to decoherence noise.\n",
+    "It is now time to construct our trotterized circuit. As discussed earlier, trotterization breaks down the time evolution into discrete steps, so we need to choose how many steps to use. For this example, we will select six steps. Generally, the approach involves balancing the trotter error—an approximation error introduced by the algorithm—with errors caused by decoherence. Increasing the number of trotter steps reduces the approximation error but requires deeper quantum circuits, which are more susceptible to decoherence noise.\n",
     "\n",
     "The circuit will be defined using several parameters: the theta parameter representing the strength of the external magnetic field, the couplings between layers, the number of steps, the number of qubits, and, of course, the choice of the device backend. Since the magnetization of the system depends on the external magnetic field’s strength, it is valuable to run the simulation at different magnetic field values. This variation corresponds to different rotation angles for the RX gate in the circuit.\n",
     "\n",
@@ -302,12 +302,12 @@
     "num_params = parameter_values.size\n",
     "```\n",
     "\n",
-    "### Qiskit patterns step 2: optimize\n",
+    "### Qiskit patterns step 2: Optimize\n",
     "\n",
     "Now that we have generated our circuit, [the next step](/docs/tutorials/probabilistic-error-amplification#step-2-optimize-problem-for-quantum-hardware-execution) is to optimize it. The first part of this process involves defining a pass manager. In the context of the Qiskit SDK, transpilation is the process of transforming an input circuit into a form that is suitable for execution on a quantum device. This transformation happens through a sequence of steps known as transpiler passes.\n",
     "A pass manager is an object that holds a list of these transpiler passes and can apply them to a circuit. To create one, you initialize a `PassManager` with the desired list of transpiler passes. Ultimately, the pass manager produces an ISA circuit—a circuit expressed in terms of the backend’s Instruction Set Architecture (ISA). This means the circuit is represented using gates that are native to the backend hardware, although it does not yet include the timing information required to run the circuit on the device.\n",
     "\n",
-    "### Qiskit patterns step 3: execute using primitives\n",
+    "### Qiskit patterns step 3: Execute using primitives\n",
     "\n",
     "Now, it is time to [run our circuit](/docs/tutorials/probabilistic-error-amplification#step-3-execute-using-qiskit-primitives). We will use the Estimator as our primary tool for this experiment because our goal is to measure the total magnetization of the system. The Estimator is specifically designed to estimate the expectation values of observables, making it the ideal choice here.\n",
     "At this stage, it is also essential to configure our error mitigation settings. We will apply Zero Noise Extrapolation (ZNE) to improve the accuracy of our results. In the tutorial, you will see that we specify two or more noise factor values at which to evaluate the extrapolated models, and we select “Probabilistic Error Amplification” (PEA) as our amplification method. PEA is preferred for this experiment because it scales significantly better than other options, which is crucial when working with systems of 100 or more qubits.\n",
@@ -333,7 +333,7 @@
     "\n",
     "This technique allows us to estimate what the outcome would be if there were no noise, improving the accuracy of quantum computations.\n",
     "\n",
-    "The primary challenge in effectively implementing Zero-Noise Extrapolation (ZNE) lies in developing an accurate noise model for the expectation value and amplifying the noise in a controlled and well-understood manner. Common techniques for error amplification in ZNE include scaling pulse duration through calibration, repeating gates using identity cycles, and adding noise via sampling Pauli channels—a method known as Probabilistic Error Amplification (PEA).\n",
+    "The primary challenge in effectively implementing ZNE is developing an accurate noise model for the expectation value and amplifying the noise in a controlled and well-understood manner. Common techniques for error amplification in ZNE include scaling pulse duration through calibration, repeating gates using identity cycles, and adding noise via sampling Pauli channels—a method known as Probabilistic Error Amplification (PEA).\n",
     "\n",
     "Among these, PEA is often the preferred choice for several reasons:\n",
     "\n",
@@ -357,10 +357,10 @@
     "\n",
     "![Steps are shown in learning a sparse Pauli-Lindblad noise model](/learning/images/courses/quantum-computing-in-practice/simulating-nature/lindblad.svg)\n",
     "\n",
-    "### Qiskit patterns step 4: post-processing\n",
+    "### Qiskit patterns step 4: Post-process\n",
     "\n",
-    "Once the experiment is finished, you are ready to view your result by [post-processing](/docs/tutorials/probabilistic-error-amplification#step-4-post-process-and-return-result-in-desired-classical-format) it. The dotted gray line in the plotted data represents the results obtained using approximate classical methods, with the approximation error reduced to a low threshold. The raw data points for the various noise factors, selected at the outset, are clearly offset from this dotted line. In contrast, the solid blue line displays the data after applying our Zero-Noise Extrapolation (ZNE) processing, which noticeably brings the results much closer to the exact values.\n",
-    "In summary, the values obtained under normal noise conditions (noise factor nf=1.0nf=1.0) show significant deviation from the exact results. Meanwhile, the mitigated values align closely with the exact ones, demonstrating the effectiveness of the Phase Estimation Algorithm (PEA)-based noise mitigation technique.\n",
+    "After the experiment fishes, you can view the result by [post-processing](/docs/tutorials/probabilistic-error-amplification#step-4-post-process-and-return-result-in-desired-classical-format) it. The dotted gray line in the plotted data represents the results obtained using approximate classical methods, with the approximation error reduced to a low threshold. The raw data points for the various noise factors, selected at the outset, are clearly offset from this dotted line. In contrast, the solid blue line displays the data after applying our ZNE processing, which noticeably brings the results much closer to the exact values.\n",
+    "In summary, the values obtained under normal noise conditions (noise factor nf=1.0) show significant deviation from the exact results. Meanwhile, the mitigated values align closely with the exact ones, demonstrating the effectiveness of the PEA-based noise mitigation technique.\n",
     "\n",
     "![A plot of exact solutions, unmitigated solutions, and mitigated solutions to the problem solved in the utility paper.](/learning/images/courses/quantum-computing-in-practice/simulating-nature/data.svg)\n",
     "\n",
@@ -371,7 +371,7 @@
     "* Quantum simulation is one of the most promising application areas in the short  to mid term.\n",
     "* It has wide-ranging applications, from pharmaceuticals to high-energy physics, materials science, and more.\n",
     "* The Utility paper from IBM, published in 2023 pointed the way towards being able to use quantum computers for scientific discovery  and we worked through the associated tutorial that goes along with that paper.\n",
-    "* The steps to work through a simulation problem from start to finish are relatively straightforward, especially once you get the hang of it, and we hope that you can now use this video + tutorial as a guide for even more simulation problems."
+    "* The steps to work through a simulation problem from start to finish are relatively straightforward, and we hope that you can now use this video and tutorial as a guide for even more simulation problems."
    ]
   }
  ],
