added video link and skipped spelling of one word

--- a/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
+++ b/learning/courses/quantum-computing-in-practice/simulating-nature.ipynb
@@ -2,12 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "50cce96c",
+   "metadata": {},
+   "source": [
+    "{/* cspell:ignore underperforming */}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c3d10c9",
    "metadata": {},
    "source": [
     "# Simulating nature\n",
     "\n",
-    "Video link\n",
+    "Watch the video on mapping from Olivia Lanes.\n",
+    "\n",
+    "<IBMVideo id=\"134460549\" title=\"In this video, Olivia Lanes describes how a quantum computer can be used to simulate nature, including at the utility scale.\"/>\n",
+    "\n",
+    "This lesson uses content from this tutorial:\n",
     "\n",
     "[Utility-scale error mitigation with probabilistic error amplification tutorial](/docs/tutorials/probabilistic-error-amplification)"
    ]
