Missing the word Krylov in the opening paragraph,

--- a/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
@@ -15,7 +15,7 @@
    "id": "97cfd899-4196-4d24-bf16-60bdd3899600",
    "metadata": {},
    "source": [
-    "This lesson on Sample-based quantum diagonalization (SKQD) combines methods explained in previous methods. It consists of a single example leveraging the Qiskit patterns framework:\n",
+    "This lesson on Sample-based Krylov quantum diagonalization (SKQD) combines methods explained in previous methods. It consists of a single example leveraging the Qiskit patterns framework:\n",
     "\n",
     "    - Step 1: Map problem to quantum circuits and operators\n",
     "    - Step 2: Optimize for target hardware\n",
